--- a/src/styles/web/themes/overlays.styl
+++ b/src/styles/web/themes/overlays.styl
@@ -4,7 +4,7 @@
 @keyframes overlay
   0%
     opacity 0
-    transform translateY(100%)
+    transform translateY(100vh)
   50%
     opacity 1
   100%
@@ -13,68 +13,67 @@
 @keyframes overlay-backdrop
   0%
     backdrop-filter blur(0px)
-  80%
+  80%, 100%
     backdrop-filter blur(4px)
 
 @keyframes overlay-actions
-  0%
-    opacity 0
-  50%
+  0%, 30%
     opacity 0
   100%
     opacity 1
 
 .backdrop
-  position fixed
+  position absolute
   top 0
   left 0
-  height 100%
+  min-height 100%
   width 100%
   display flex
   flex-direction column
-  backdrop-filter blur(4px)
 
-  &:before // spacer
-    margin auto
+  &::before // spacer
     content ''
     flex 1
+  
+  &::after
+    position fixed
+    top 0
+    left 0
+    width 100%
+    height 100%
+    content ''
+    backdrop-filter blur(4px)
 
   .overlay
-    position relative
     z-index 2
     margin auto
     width 100%
     max-width maxWidth
-    max-height 100%
-    overflow hidden auto
-    -webkit-overflow-scrolling touch
     box-shadow 0 0 50px @css { rgba(var(--textColorRgb), .2) }
 
+  &.overlay-enter-active, &.overlay-leave-active
+    animation-name overlay-noop // for vue to get animationend events
+    &::after
+      animation-name overlay-backdrop
+    & .overlay
+      animation-name overlay
+    & .actions
+      animation-name overlay-actions
   $inDuration = .6s
   $outDuration = .3s
-
   &.overlay-enter-active
-    &, & .overlay, & .actions
+    &, &::after, & .overlay, & .actions
       animation-duration $inDuration
 
   &.overlay-leave-active
-    &, & .overlay, & .actions
+    &, &::after, & .overlay, & .actions
       animation-duration $outDuration
       animation-direction reverse
 
-  &.overlay-enter-active, &.overlay-leave-active
-    animation-name overlay-backdrop
-  
-    & .overlay
-      animation-name overlay
-
-    & .actions
-      animation-name overlay-actions
-
 // theme
 
-html.overlay-open main
-  overflow-y hidden
+.overlay-open main
+  perspective none
 
 closePad = 60px
 
@@ -86,7 +85,7 @@ closePad = 60px
   max-width maxWidth
   z-index 3
   padding closePad
-  background @css { linear-gradient(0deg, var(--bgColor) 0%, rgba(var(--bgColorRgb), .8) 47.79%, rgba(var(--bgColorRgb), 0) 100%) }
+  background @css { linear-gradient(rgba(var(--bgColorRgb), 0), var(--bgColor)) }
 
   button.close
     @extends .outline-button
